refactor: address code review feedback on DTOs and controllers
- Add @Email validation to email fields in OwnerFieldsDto and StaffFieldsDto
- Add @Min/@Max validation to year and mileage in VehicleFieldsDto
- Add @Min(1) to estimatedTimeHours in ServiceTypeFieldsDto
- Replace collect(Collectors.toList()) with .toList() in all controllers

Agent-Logs-Url: https://github.com/ch88251/carclinic/sessions/5dfd74c4-ebaa-42f1-9251-1be32f65c36c

Co-authored-by: ch88251 <2375185+ch88251@users.noreply.github.com>