@@ -2,7 +2,6 @@ package com.carclinic.web;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.springframework.http.ResponseEntity;
@@ -39,7 +38,7 @@ public class AppointmentController {
     public List<ServiceAppointmentDto> getAppointments() {
         return StreamSupport.stream(repository.findAll().spliterator(), false)
                 .map(serviceAppointmentMapper::toServiceAppointmentDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @DeleteMapping("/{id}")
